--- a/haproxy/templates/default/haproxy.cfg.erb
+++ b/haproxy/templates/default/haproxy.cfg.erb
@@ -318,5 +318,14 @@ frontend https-in
   <% elsif !node[:haproxy][:java_backends].empty? -%>
   default_backend java_servers_ssl
   <% end -%>
+  
+  frontend http
+  acl odata path_end -i /odata
+
+  use_backend srvs_odata    if odata
+
+  backend srvs_odata
+   balance roundrobin 
+   server host1 awseb-e-v-awsebloa-1eev6j6tdobfh-380368556.us-west-2.elb.amazonaws.com 
 
 <% end -%>  
