--- a/haproxy/templates/default/haproxy.cfg.erb
+++ b/haproxy/templates/default/haproxy.cfg.erb
@@ -158,16 +158,18 @@ backend java_servers_ssl
   <% end -%>
 <% end -%>
 
+backend coverya_api
+  balance roundrobin 
+  server api1 54.68.21.102:80 
+
 frontend http-in
   bind :80
   
-  acl odata path_end -i /odata
+  acl api_mapping path_end -i /odata
 
-  use_backend srvs_odata if odata
+  use_backend coverya_api if api_mapping
 
-  backend srvs_odata
-   balance roundrobin 
-   server host1 54.68.21.102:80 
+  
   
   # all domains of Rails applications
   <% node[:haproxy][:rails_applications].each do |app_name, app_config| -%>
