--- a/haproxy/templates/default/haproxy.cfg.erb
+++ b/haproxy/templates/default/haproxy.cfg.erb
@@ -160,7 +160,7 @@ backend java_servers_ssl
 
 backend coverya_api
   balance roundrobin 
-  server api1 54.68.21.102:80 
+  server api1 awseb-e-v-AWSEBLoa-1EEV6J6TDOBFH-380368556.us-west-2.elb.amazonaws.com 
 
 frontend http-in
   bind :80
