--- a/haproxy/templates/default/haproxy.cfg.erb
+++ b/haproxy/templates/default/haproxy.cfg.erb
@@ -169,7 +169,7 @@ backend coverya_staging_api
 frontend http-in
   bind :80
   
-  #rspidel ^WWW-Authenticate:.*
+  rspidel ^WWW-Authenticate:.*
   
   acl production_api_mapping path_beg -i /api
   acl staging_api_mapping path_beg -i /staging-api
